open issues visible count

--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -197,3 +197,11 @@ ul.menu li:hover {
     50% {-moz-transform: rotate(180deg);}
     100% {-moz-transform: rotate(360deg);}
 }
+
+#open-issues-count {
+    color: red;
+}
+
+.clickable {
+    cursor: pointer;
+}
